<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IFarm</string>
    <string name="welcome">Welcome to Ifarm</string>
    <string name="welcome_note">
        Welcome to iFarm
A new way to ask questions and
get answers about all things
farming.
If you have a question, ask it.
If you have the answer, reply.
Questions are also reviewed by
a range of experts including the
IFA, Vets and Accountants, along
with
Upload a picture to help the
community better understand
your questions.
</string>
    <string name="post_button">Post</string>
    <string name="start">Lets Get Started</string>
    <string name="connect">
        You need to connect to a social
network so we can route your
questions to the right people.
Dont worry, we wont post
anything automatically.
        </string>
    <string name="answer_here">Answer here</string>
    <string name="continues">Continue</string>
    <string name="facebook_button">Facebook</string>
    <string name="refresh">Refresh</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="answer_a_question">Answer a Question</string>
    <string name="animal_health">Animal Health</string>
    <string name="legal">Legal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="policy_and_schemes">Policy and Schemes</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_answer">Answer</string>
    <string name="string_ques">string_ques</string>
    <string name="title_activity_answer_details">AnswerDetailsActivity</string>
    <string name="title_activity_people_details">PeopleDetailsActivity</string>
    <string name="topics_prompt">Choose a Topic</string>
    <string name="ask_question">Ask your question here</string>
    <string name="take_a_pic">Take a picture</string>
    <string name="like">Likes:</string>
    <string name="dislike">Disikes:</string>
    <string name="answer">Answer:</string>
    <string name="thumbnail">Placeholder picture</string>

    <string-array name="topics">
        <item>All</item>
        <item>Policy and Schemes</item>
        <item>Animal Health</item>
        <item>Legal</item>
    </string-array>

    <string name="title_activity_pand_s">PAndSActivity</string>

</resources>
